<resources>
    <string name="app_name">ModuloControlrecibo</string>
    <string name="nombre">Ingrese Nombre o Apellido</string>
    <string name="concepto">Ingrese concepto de pago</string>
    <string name="perido">Ingrese el perido</string>
    <string name="recibo">Ingrese el recibo</string>
    <string name="btbuscat">Buscar</string>
    <string name="busquedanombre">Nombre y Apellido</string>
    <string name="busqueconcepto">Concepto</string>
    <string name="busquedacodigo">Codigo</string>
    <string name="busquedarecibo">Recibo</string>
    <string name="busquedafecha">Fecha</string>
</resources>
